--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,8 @@
 
         </LinearLayout>
 
+        <!-- TODO (6) Add a LinearLayout that contains a checkbox to grant the location permissions
+                        and set the checkbox click listener to call onLocationPermissionClicked -->
         <CheckBox
             android:id="@+id/location_permission"
             android:layout_width="match_parent"
@@ -75,7 +77,8 @@
             android:background="@color/colorPrimary"
             android:text="@string/add_new_location"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:id="@+id/add_location"/>
 
         <TextView
             android:layout_width="wrap_content"
