Lesson 5-22 Slient mode
Add notification, silent mode

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,13 @@
             android:layoutDirection="rtl"
             android:text="Location Permissions" />
 
+        <CheckBox
+            android:id="@+id/ring_permission"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layoutDirection="rtl"
+            android:text="Ringtone Permissions" />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
